--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </ul>
   
   <footer>
-  <font-size ="0.5px">Desinged by Jisu YUN<br>Website created by Kyungil High School Web Programming Club, 2017
+  <font-size ="0.5px">Designed by Jisu YUN<br>Website created by Kyungil High School Web Programming Club, 2017
   </font>
 </footer>
 
