--- a/curriculum.html
+++ b/curriculum.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>WP Club Official Website</title>
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Raleway:100,500,600,800" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -26,32 +30,32 @@
   <ul>
     <li>
       <h2></h2>
-      <p>°æÀÏ°íµîÇÐ±³ ÀÚÀ²µ¿¾Æ¸® WP (Web Programming) µ¿¾Æ¸®¿¡¼­´Â À¥ °³¹ß¿¡ ÇÊ¿äÇÑ ±âº»ÀûÀÎ Áö½ÄµéÀ» ÇÐ½ÀÇÏ±â À§ÇØ 1ÇÐ±â¿¡¼­´Â ÄÄÇ»ÅÍ ¾ð¾î¸¦, 2ÇÐ±â¿¡¼­´Â À¥ »çÀÌÆ® Á¦ÀÛÀ» ÇÏ´Â ¼ø¼­·Î Ä¿¸®Å§·³ÀÌ ÁøÇàµË´Ï´Ù.</p>
+      <p>ê²½ì¼ê³ ë“±í•™êµ ìžìœ¨ë™ì•„ë¦¬ WP (Web Programming) ë™ì•„ë¦¬ì—ì„œëŠ” ì›¹ ê°œë°œì— í•„ìš”í•œ ê¸°ë³¸ì ì¸ ì§€ì‹ë“¤ì„ í•™ìŠµí•˜ê¸° ìœ„í•´ 1í•™ê¸°ì—ì„œëŠ” ì»´í“¨í„° ì–¸ì–´ë¥¼, 2í•™ê¸°ì—ì„œëŠ” ì›¹ ì‚¬ì´íŠ¸ ì œìž‘ì„ í•˜ëŠ” ìˆœì„œë¡œ ì»¤ë¦¬í˜ëŸ¼ì´ ì§„í–‰ë©ë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Learn To Code</h2>
-      <p>WP µ¿¾Æ¸®´Â ¸Ç Ã³À½ ÄÄÇ»ÅÍ ÇÁ·Î±×·¡¹Ö¿¡¼­ ÇÊ¼ö·Î ÇÊ¿äÇÑ ÄÚµù ¾ð¾î¸¦ Á¢ÇÏ±â À§ÇØ °¡Àå ±âº» ¾ð¾îµéÀÎ HTML, CSS, Javascript¸¦ ¸ÕÀú °øºÎÇÏ°í ³ªÁß¿¡ PythonÀ» <a href = "codeacademy.com">codeacadmey.com</a> ÀÌ¶ó´Â ÄÚµù ±³À° À¥»çÀÌÆ®¸¦ ÅëÇØ 1ÇÐ±â µ¿¾È °øºÎ¸¦ ÁøÇàÇÕ´Ï´Ù. °¢ ¾ð¾î¸¶´Ù ÁÖ¾îÁö´Â ÄÚ½º¿Í ÀÛÀº ÇÁ·ÎÁ§Æ®¸¦ ¼öÇàÇÏ¸ç ÀÍÈ÷´Â ¹æ½ÄÀ¸·Î, ¾ðÁ¦µçÁö ÇÐ½À »çÀÌÆ®¿¡ Á¢¼ÓÇÏ¿© ÇÐ½ÀÀ» ÇÒ ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó, ÀÚ±â º¹½À°ú ÀÌ¹Ì ÄÚ½º¸¦ ¼öÇàÇÑ ´Ù¸¥ ÇÐ»ýµé¿¡°Ôµµ ÀÚ¹ßÀûÀ¸·Î Áú¹®ÇÏ¿© ÄÄÇ»ÅÍ ¾ð¾î¸¦ ÇÐ½ÀÇÕ´Ï´Ù.</p>
+      <p>WP ë™ì•„ë¦¬ëŠ” ë§¨ ì²˜ìŒ ì»´í“¨í„° í”„ë¡œê·¸ëž˜ë°ì—ì„œ í•„ìˆ˜ë¡œ í•„ìš”í•œ ì½”ë”© ì–¸ì–´ë¥¼ ì ‘í•˜ê¸° ìœ„í•´ ê°€ìž¥ ê¸°ë³¸ ì–¸ì–´ë“¤ì¸ HTML, CSS, Javascriptë¥¼ ë¨¼ì € ê³µë¶€í•˜ê³  ë‚˜ì¤‘ì— Pythonì„ <a href = "codeacademy.com">codeacadmey.com</a> ì´ë¼ëŠ” ì½”ë”© êµìœ¡ ì›¹ì‚¬ì´íŠ¸ë¥¼ í†µí•´ 1í•™ê¸° ë™ì•ˆ ê³µë¶€ë¥¼ ì§„í–‰í•©ë‹ˆë‹¤. ê° ì–¸ì–´ë§ˆë‹¤ ì£¼ì–´ì§€ëŠ” ì½”ìŠ¤ì™€ ìž‘ì€ í”„ë¡œì íŠ¸ë¥¼ ìˆ˜í–‰í•˜ë©° ìµížˆëŠ” ë°©ì‹ìœ¼ë¡œ, ì–¸ì œë“ ì§€ í•™ìŠµ ì‚¬ì´íŠ¸ì— ì ‘ì†í•˜ì—¬ í•™ìŠµì„ í•  ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼, ìžê¸° ë³µìŠµê³¼ ì´ë¯¸ ì½”ìŠ¤ë¥¼ ìˆ˜í–‰í•œ ë‹¤ë¥¸ í•™ìƒë“¤ì—ê²Œë„ ìžë°œì ìœ¼ë¡œ ì§ˆë¬¸í•˜ì—¬ ì»´í“¨í„° ì–¸ì–´ë¥¼ í•™ìŠµí•©ë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>The Structure : HTML</h2>
-      <p>À¥»çÀÌÆ®¸¦ Á¦ÀÛÇÏ´Âµ¥ °¡Àå ±âº»ÀÌÀÚ Áß¿äÇÑ ¾ð¾î Áß ÇÏ³ªÀÎ HTML (Hyper Text Markup Language)Àº WP µ¿¾Æ¸® È¸¿øµéÀÌ Ã³À½À¸·Î Á¢Çß´ø ¾ð¾îÀÔ´Ï´Ù. ±ÛÀÇ Å©±â, »ö±ò¸¸À» ¹Ù²Ü ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó ±Û¿¡ ÇÏÀÌÆÛ¸µÅ© Ãß°¡¿Í ÀÌ¹ÌÁö, µ¿¿µ»ó µî ¿©·¯°¡Áö ÄÁÅÙÃ÷¿Íµµ ¿¬°á½ÃÄÑÁÖ´Â À¯¿ëÇÏ¸é¼­ ±âº»ÀûÀÎ ¾ð¾îÀÓÀ» µ¿¾Æ¸® È¸¿øµéÀº ÇÐ½ÀÇÏ¿´½À´Ï´Ù.</p>
+      <p>ì›¹ì‚¬ì´íŠ¸ë¥¼ ì œìž‘í•˜ëŠ”ë° ê°€ìž¥ ê¸°ë³¸ì´ìž ì¤‘ìš”í•œ ì–¸ì–´ ì¤‘ í•˜ë‚˜ì¸ HTML (Hyper Text Markup Language)ì€ WP ë™ì•„ë¦¬ íšŒì›ë“¤ì´ ì²˜ìŒìœ¼ë¡œ ì ‘í–ˆë˜ ì–¸ì–´ìž…ë‹ˆë‹¤. ê¸€ì˜ í¬ê¸°, ìƒ‰ê¹”ë§Œì„ ë°”ê¿€ ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼ ê¸€ì— í•˜ì´í¼ë§í¬ ì¶”ê°€ì™€ ì´ë¯¸ì§€, ë™ì˜ìƒ ë“± ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ì™€ë„ ì—°ê²°ì‹œì¼œì£¼ëŠ” ìœ ìš©í•˜ë©´ì„œ ê¸°ë³¸ì ì¸ ì–¸ì–´ìž„ì„ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ í•™ìŠµí•˜ì˜€ìŠµë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Design The Site : CSS</h2>
-      <p>À¥»çÀÌÆ®¸¦ Á¦ÀÛÇÏ´Âµ¥ °¡Àå ±âº»ÀÌÀÚ Áß¿äÇÑ ¾ð¾î Áß ÇÏ³ªÀÎ HTML (Hyper Text Markup Language)Àº WP µ¿¾Æ¸® È¸¿øµéÀÌ Ã³À½À¸·Î Á¢Çß´ø ¾ð¾îÀÔ´Ï´Ù. ±ÛÀÇ Å©±â, »ö±ò¸¸À» ¹Ù²Ü ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó ±Û¿¡ ÇÏÀÌÆÛ¸µÅ© Ãß°¡¿Í ÀÌ¹ÌÁö, µ¿¿µ»ó µî ¿©·¯°¡Áö ÄÁÅÙÃ÷¿Íµµ ¿¬°á½ÃÄÑÁÖ´Â À¯¿ëÇÏ¸é¼­ ±âº»ÀûÀÎ ¾ð¾îÀÓÀ» µ¿¾Æ¸® È¸¿øµéÀº ÇÐ½ÀÇÏ¿´½À´Ï´Ù.</p>
+      <p>ì›¹ì‚¬ì´íŠ¸ë¥¼ ì œìž‘í•˜ëŠ”ë° ê°€ìž¥ ê¸°ë³¸ì´ìž ì¤‘ìš”í•œ ì–¸ì–´ ì¤‘ í•˜ë‚˜ì¸ HTML (Hyper Text Markup Language)ì€ WP ë™ì•„ë¦¬ íšŒì›ë“¤ì´ ì²˜ìŒìœ¼ë¡œ ì ‘í–ˆë˜ ì–¸ì–´ìž…ë‹ˆë‹¤. ê¸€ì˜ í¬ê¸°, ìƒ‰ê¹”ë§Œì„ ë°”ê¿€ ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼ ê¸€ì— í•˜ì´í¼ë§í¬ ì¶”ê°€ì™€ ì´ë¯¸ì§€, ë™ì˜ìƒ ë“± ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ì™€ë„ ì—°ê²°ì‹œì¼œì£¼ëŠ” ìœ ìš©í•˜ë©´ì„œ ê¸°ë³¸ì ì¸ ì–¸ì–´ìž„ì„ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ í•™ìŠµí•˜ì˜€ìŠµë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Create Website</h2>
-      <p>¸ÅÁÖ ¼ö¿äÀÏ, È¸ÀÇ½Ç¿¡ ¾É¾Æ¼­ ÄÄÇ»ÅÍ¸¦ Å°°í µ¿¾Æ¸® È¸¿øµéÀ» ±³À° À¥»çÀÌÆ®¿¡ Á¢¼ÓÇÏ¿© ÀÚ½ÅÀÌ °øºÎÇß´ø ÄÚµùÀ» °è¼Ó ÇÐ½ÀÇÕ´Ï´Ù. Ä¥ÆÇ ¸Þ¸ð¸¦ ÅëÇÑ º¹½ÀÀº ¹°·Ð, °¡²û¾¿ ¼ö´Ùµµ ¶³¸é¼­ ¿ôÀ½²ÉÀ» ÇÇ¿ì±âµµ ÇÕ´Ï´Ù. ±×·¸°Ô µ¿¾Æ¸® È¸¿øµéÀº ¼­·Î °¡±î¿öÁö°í °ø½Ä À¥»çÀÌÆ® °³¹ßÀ» ÅëÇØ °°ÀÌ Çù·ÂÇÏ¿© ¼­·ÎÀÇ ºÎÁ·ÇÑ ÇÐ½ÀÀ» Ã¤¿öÁÖ°í µµ¿ÍÁÝ´Ï´Ù. µ¿¾Æ¸® È¸¿øµéÀÇ ¿­Á¤, Á¤°ú Çùµ¿½ÉÀ» Æ÷Æ®Æú¸®¿À¸¦ ÅëÇØ È®ÀÎÇØº¸¼¼¿ä.</p>
+      <p>ë§¤ì£¼ ìˆ˜ìš”ì¼, íšŒì˜ì‹¤ì— ì•‰ì•„ì„œ ì»´í“¨í„°ë¥¼ í‚¤ê³  ë™ì•„ë¦¬ íšŒì›ë“¤ì„ êµìœ¡ ì›¹ì‚¬ì´íŠ¸ì— ì ‘ì†í•˜ì—¬ ìžì‹ ì´ ê³µë¶€í–ˆë˜ ì½”ë”©ì„ ê³„ì† í•™ìŠµí•©ë‹ˆë‹¤. ì¹ íŒ ë©”ëª¨ë¥¼ í†µí•œ ë³µìŠµì€ ë¬¼ë¡ , ê°€ë”ì”© ìˆ˜ë‹¤ë„ ë–¨ë©´ì„œ ì›ƒìŒê½ƒì„ í”¼ìš°ê¸°ë„ í•©ë‹ˆë‹¤. ê·¸ë ‡ê²Œ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ ì„œë¡œ ê°€ê¹Œì›Œì§€ê³  ê³µì‹ ì›¹ì‚¬ì´íŠ¸ ê°œë°œì„ í†µí•´ ê°™ì´ í˜‘ë ¥í•˜ì—¬ ì„œë¡œì˜ ë¶€ì¡±í•œ í•™ìŠµì„ ì±„ì›Œì£¼ê³  ë„ì™€ì¤ë‹ˆë‹¤. ë™ì•„ë¦¬ íšŒì›ë“¤ì˜ ì—´ì •, ì •ê³¼ í˜‘ë™ì‹¬ì„ í¬íŠ¸í´ë¦¬ì˜¤ë¥¼ í†µí•´ í™•ì¸í•´ë³´ì„¸ìš”.</p>
 
     </li>
     <li>
       <h2>Publish To The Web</h2>
-      <p>WP µ¿¾Æ¸® È°µ¿À» ÅëÇØ¼­ µ¿¾Æ¸® È¸¿øµéÀº ¸ðµÎ ÄÄÇ»ÅÍ ÇÁ·Î±×·¡¹Ö¿¡ ´ëÇÑ Ã¹ ¹ßÀ» ³»µó¾úÀ¸¸ç, ÀÌ À¥»çÀÌÆ®¸¦ °³¹ßÇÔÀ¸·Î½á ÀÚ½ÅÀÌ ¾ÕÀ¸·Î Á÷Á¢ ¿©·¯°¡Áö ÄÁÅÙÃ÷¸¦ ¸¸µå´Âµ¥ ÁÁÀº ¿ªÇÒÀ» ÇÒ °³¹ßÀÚ°¡ µÉ ¼ö ÀÖÀ» ¹Ø°Å¸§ÀÌ µÉ °ÍÀÌ¶ó°í µ¿¾Æ¸® ½º½º·Î ±â´ë¸¦ ÇÏ°í ÀÖ½À´Ï´Ù.</p>
+      <p>WP ë™ì•„ë¦¬ í™œë™ì„ í†µí•´ì„œ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ ëª¨ë‘ ì»´í“¨í„° í”„ë¡œê·¸ëž˜ë°ì— ëŒ€í•œ ì²« ë°œì„ ë‚´ë”›ì—ˆìœ¼ë©°, ì´ ì›¹ì‚¬ì´íŠ¸ë¥¼ ê°œë°œí•¨ìœ¼ë¡œì¨ ìžì‹ ì´ ì•žìœ¼ë¡œ ì§ì ‘ ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ë¥¼ ë§Œë“œëŠ”ë° ì¢‹ì€ ì—­í• ì„ í•  ê°œë°œìžê°€ ë  ìˆ˜ ìžˆì„ ë°‘ê±°ë¦„ì´ ë  ê²ƒì´ë¼ê³  ë™ì•„ë¦¬ ìŠ¤ìŠ¤ë¡œ ê¸°ëŒ€ë¥¼ í•˜ê³  ìžˆìŠµë‹ˆë‹¤.</p>
 
     </li>
   </ul>
