--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="col-sm-8"><a href="https://ibb.co/hEfEBk"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p><a href="#">about</a></p>
-        <p><a href="#">curriculum</a></p>
+        <p><a href="wp-club-website.github.io/curriculum.html">curriculum</a></p>
         <p><a href="#">members</a></p>
         <p><a href="#">catalog</a></a></p>
         <p><a href="#">portfolio</a></p>
