--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="https://ibb.co/hEfEBk"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="wp-club-website.github.io"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p><a href="#">about</a></p>
         <p><a href="curriculum.html">curriculum</a></p>
