--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <li>
       <h2>What We do</h2>
       <p>WP 동아리는 맨 처음 컴퓨터 프로그래밍에서 필수로 필요한 코딩 언어를 접하기 위해 가장 기본 언어들인 HTML, CSS, Javascript를 먼저 공부하고 나중에 Python을 <a href = "codeacademy.com">codeacadmey.com</a> 이라는 코딩 교육 웹사이트를 통해 1학기 동안 공부를 진행합니다. 그 이후, 2학기에는 코딩 지식을 총동원하여 같이 WP 동아리 공식 웹사이트를 제작을 하게 됩니다.</p>
-      <a href="#">Take A Look At our Curriculum</a>
+      <a href="curriculum.html">Take A Look At our Curriculum</a>
     </li>
     <li>
       <h2>We Are Enthusiastic</h2>
