--- a/portfolio.html
+++ b/portfolio.html
@@ -8,14 +8,14 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="https://ibb.co/hEfEBk"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
-        <p>about</p>
-        <p>curriculum</p>
-        <p>members</p>
-        <p>catalog</p>
-        <p><b><u>portfolio</u></b></p>
-        <p>photos</p>
+        <p><a href="about.html">about</a></p>
+        <p><a href="curriculum.html">curriculum</a></p>
+        <p><a href="members.html">members</a></p>
+        <p><a href="catalog.html">catalog</a></p>
+        <p><b><u><a href="portfolio.html">portfolio</a></u></b></p>
+        <p><a href="photos.html.html">photos</a></p>
       </nav>
     </div>
   </header>
