--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="http://ibb.co/bxqvP5"><img src="http://preview.ibb.co/iPNmWk/Untitled_design.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="index.html"><img src="http://preview.ibb.co/iPNmWk/Untitled_design.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p><a href="about.html">about</a></p>
         <p><a href="curriculum.html">curriculum</a></p>
