--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="https://ibb.co/hEfEBk"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p><a href="#"><b><u>about</u></b></a></p>
         <p><a href="#">curriculum</a></p>
@@ -25,41 +25,41 @@
 
   <ul>
     <li>
-      <h2>&nbsp;&nbsp;&nbsp;<&nbsp;ÇÐ±³¼Ò°³&nbsp;></h2>
-      <p>¿ì¸®&nbsp; ÇÐ±³´Â 2004³â¿¡ °³±³ÇÏ¿´À¸¸ç, 2011³âºÎÅÍ´Â ¼±ÁøÇü ±³°ú±³½ÇÁ¦¸¦ ¿î¿µÇÏ´Â ÀÚÀ²Çü°ø¸³°íµîÇÐ±³·Î »õ·Î¿î Ãâ¹ßÀ» ½ÃÀÛÇÑ ÀþÀº ÇÐ±³ÀÔ´Ï´Ù. ¿ì¸® ÇÐ±³´Â "365ÀÏ ÇÐ»ýÇÐºÎ¸ð¼±»ý´ÔÀÌ ÇÔ²² ²ÞÀ» Å°¿ö°¡´Â Çàº¹ÇÑ ÇÐ±³"¸¦ ±³À° ÀÌ»óÀ¸·Î ¼³Á¤ÇÏ¿© ´ÙÀ½°ú °°Àº ³ë·ÂÀ» ÇÏ°í ÀÖ½À´Ï´Ù.
+      <h2>&nbsp;&nbsp;&nbsp;<&nbsp;í•™êµì†Œê°œ&nbsp;></h2>
+      <p>ìš°ë¦¬&nbsp; í•™êµëŠ” 2004ë…„ì— ê°œêµí•˜ì˜€ìœ¼ë©°, 2011ë…„ë¶€í„°ëŠ” ì„ ì§„í˜• êµê³¼êµì‹¤ì œë¥¼ ìš´ì˜í•˜ëŠ” ìžìœ¨í˜•ê³µë¦½ê³ ë“±í•™êµë¡œ ìƒˆë¡œìš´ ì¶œë°œì„ ì‹œìž‘í•œ ì Šì€ í•™êµìž…ë‹ˆë‹¤. ìš°ë¦¬ í•™êµëŠ” "365ì¼ í•™ìƒí•™ë¶€ëª¨ì„ ìƒë‹˜ì´ í•¨ê»˜ ê¿ˆì„ í‚¤ì›Œê°€ëŠ” í–‰ë³µí•œ í•™êµ"ë¥¼ êµìœ¡ ì´ìƒìœ¼ë¡œ ì„¤ì •í•˜ì—¬ ë‹¤ìŒê³¼ ê°™ì€ ë…¸ë ¥ì„ í•˜ê³  ìžˆìŠµë‹ˆë‹¤.
 <br>
-Ã¹Â°, ÇÐ»ýÀº ÀÚ½ÅÀÇ ¹Ì·¡¿Í ÀÎ»ýÀ» ÀÌ²ø¾î °¥ ²Þ°ú ¸ñÇ¥¸¦ ¼³Á¤ÇÏ°í ÀÌ¸¦ ½ÇÇöÇÏ±â À§ÇÏ¿© ¼ÒÁú°ú ´É·ÂÀ» °³¹ßÇÑ´Ù.
+ì²«ì§¸, í•™ìƒì€ ìžì‹ ì˜ ë¯¸ëž˜ì™€ ì¸ìƒì„ ì´ëŒì–´ ê°ˆ ê¿ˆê³¼ ëª©í‘œë¥¼ ì„¤ì •í•˜ê³  ì´ë¥¼ ì‹¤í˜„í•˜ê¸° ìœ„í•˜ì—¬ ì†Œì§ˆê³¼ ëŠ¥ë ¥ì„ ê°œë°œí•œë‹¤.
 <br>
-µÑÂ°, ¼±»ý´ÔÀº ÇÐ»ýÀÇ ²ÞÀ» ½ÇÇöÇÒ ¼ö ÀÖµµ·Ï Ã¼°èÀûÀÎ ¸ÂÃãÇü Áöµµ¿Í Áö¿øÀ» ÇÏ¿© ±³¿øÀ¸·Î¼­ÀÇ º¸¶÷À» Ã£´Â´Ù.
+ë‘˜ì§¸, ì„ ìƒë‹˜ì€ í•™ìƒì˜ ê¿ˆì„ ì‹¤í˜„í•  ìˆ˜ ìžˆë„ë¡ ì²´ê³„ì ì¸ ë§žì¶¤í˜• ì§€ë„ì™€ ì§€ì›ì„ í•˜ì—¬ êµì›ìœ¼ë¡œì„œì˜ ë³´ëžŒì„ ì°¾ëŠ”ë‹¤.
 <br>
-¼ÂÂ°, ÇÐºÎ¸ð´Â ¹Ì·¡»çÈ¸ÀÇ º¯È­¸¦ ´ëºñÇÏ¿© ÇÐ»ýÀ» ÀÌÇØÇÏ¸ç °Ý·ÁÇÏ¸ç Áö¿øÇÑ´Ù.
+ì…‹ì§¸, í•™ë¶€ëª¨ëŠ” ë¯¸ëž˜ì‚¬íšŒì˜ ë³€í™”ë¥¼ ëŒ€ë¹„í•˜ì—¬ í•™ìƒì„ ì´í•´í•˜ë©° ê²©ë ¤í•˜ë©° ì§€ì›í•œë‹¤.
 <br>
-°æÀÏ°øµ¿Ã¼ ±¸¼º¿ø ¸ðµÎ°¡ ²ÞÀ» Ã¤¿ì°í, º¸¶÷À» Å°¿ö Çàº¹ÇÑ ÇÐ±³¸¦ ¸¸µé±â À§ÇØ ³ë·ÂÇÏ°í ÀÖ½À´Ï´Ù.</p>
+ê²½ì¼ê³µë™ì²´ êµ¬ì„±ì› ëª¨ë‘ê°€ ê¿ˆì„ ì±„ìš°ê³ , ë³´ëžŒì„ í‚¤ì›Œ í–‰ë³µí•œ í•™êµë¥¼ ë§Œë“¤ê¸° ìœ„í•´ ë…¸ë ¥í•˜ê³  ìžˆìŠµë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Learn To Code</h2>
-      <p>WP µ¿¾Æ¸®´Â ¸Ç Ã³À½ ÄÄÇ»ÅÍ ÇÁ·Î±×·¡¹Ö¿¡¼­ ÇÊ¼ö·Î ÇÊ¿äÇÑ ÄÚµù ¾ð¾î¸¦ Á¢ÇÏ±â À§ÇØ °¡Àå ±âº» ¾ð¾îµéÀÎ HTML, CSS, Javascript¸¦ ¸ÕÀú °øºÎÇÏ°í ³ªÁß¿¡ PythonÀ» <a href = "codeacademy.com">codeacadmey.com</a> ÀÌ¶ó´Â ÄÚµù ±³À° À¥»çÀÌÆ®¸¦ ÅëÇØ 1ÇÐ±â µ¿¾È °øºÎ¸¦ ÁøÇàÇÕ´Ï´Ù. °¢ ¾ð¾î¸¶´Ù ÁÖ¾îÁö´Â ÄÚ½º¿Í ÀÛÀº ÇÁ·ÎÁ§Æ®¸¦ ¼öÇàÇÏ¸ç ÀÍÈ÷´Â ¹æ½ÄÀ¸·Î, ¾ðÁ¦µçÁö ÇÐ½À »çÀÌÆ®¿¡ Á¢¼ÓÇÏ¿© ÇÐ½ÀÀ» ÇÒ ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó, ÀÚ±â º¹½À°ú ÀÌ¹Ì ÄÚ½º¸¦ ¼öÇàÇÑ ´Ù¸¥ ÇÐ»ýµé¿¡°Ôµµ ÀÚ¹ßÀûÀ¸·Î Áú¹®ÇÏ¿© ÄÄÇ»ÅÍ ¾ð¾î¸¦ ÇÐ½ÀÇÕ´Ï´Ù.</p>
+      <p>WP ë™ì•„ë¦¬ëŠ” ë§¨ ì²˜ìŒ ì»´í“¨í„° í”„ë¡œê·¸ëž˜ë°ì—ì„œ í•„ìˆ˜ë¡œ í•„ìš”í•œ ì½”ë”© ì–¸ì–´ë¥¼ ì ‘í•˜ê¸° ìœ„í•´ ê°€ìž¥ ê¸°ë³¸ ì–¸ì–´ë“¤ì¸ HTML, CSS, Javascriptë¥¼ ë¨¼ì € ê³µë¶€í•˜ê³  ë‚˜ì¤‘ì— Pythonì„ <a href = "codeacademy.com">codeacadmey.com</a> ì´ë¼ëŠ” ì½”ë”© êµìœ¡ ì›¹ì‚¬ì´íŠ¸ë¥¼ í†µí•´ 1í•™ê¸° ë™ì•ˆ ê³µë¶€ë¥¼ ì§„í–‰í•©ë‹ˆë‹¤. ê° ì–¸ì–´ë§ˆë‹¤ ì£¼ì–´ì§€ëŠ” ì½”ìŠ¤ì™€ ìž‘ì€ í”„ë¡œì íŠ¸ë¥¼ ìˆ˜í–‰í•˜ë©° ìµížˆëŠ” ë°©ì‹ìœ¼ë¡œ, ì–¸ì œë“ ì§€ í•™ìŠµ ì‚¬ì´íŠ¸ì— ì ‘ì†í•˜ì—¬ í•™ìŠµì„ í•  ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼, ìžê¸° ë³µìŠµê³¼ ì´ë¯¸ ì½”ìŠ¤ë¥¼ ìˆ˜í–‰í•œ ë‹¤ë¥¸ í•™ìƒë“¤ì—ê²Œë„ ìžë°œì ìœ¼ë¡œ ì§ˆë¬¸í•˜ì—¬ ì»´í“¨í„° ì–¸ì–´ë¥¼ í•™ìŠµí•©ë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>The Structure : HTML</h2>
-      <p>À¥»çÀÌÆ®¸¦ Á¦ÀÛÇÏ´Âµ¥ °¡Àå ±âº»ÀÌÀÚ Áß¿äÇÑ ¾ð¾î Áß ÇÏ³ªÀÎ HTML (Hyper Text Markup Language)Àº WP µ¿¾Æ¸® È¸¿øµéÀÌ Ã³À½À¸·Î Á¢Çß´ø ¾ð¾îÀÔ´Ï´Ù. ±ÛÀÇ Å©±â, »ö±ò¸¸À» ¹Ù²Ü ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó ±Û¿¡ ÇÏÀÌÆÛ¸µÅ© Ãß°¡¿Í ÀÌ¹ÌÁö, µ¿¿µ»ó µî ¿©·¯°¡Áö ÄÁÅÙÃ÷¿Íµµ ¿¬°á½ÃÄÑÁÖ´Â À¯¿ëÇÏ¸é¼­ ±âº»ÀûÀÎ ¾ð¾îÀÓÀ» µ¿¾Æ¸® È¸¿øµéÀº ÇÐ½ÀÇÏ¿´½À´Ï´Ù.</p>
+      <p>ì›¹ì‚¬ì´íŠ¸ë¥¼ ì œìž‘í•˜ëŠ”ë° ê°€ìž¥ ê¸°ë³¸ì´ìž ì¤‘ìš”í•œ ì–¸ì–´ ì¤‘ í•˜ë‚˜ì¸ HTML (Hyper Text Markup Language)ì€ WP ë™ì•„ë¦¬ íšŒì›ë“¤ì´ ì²˜ìŒìœ¼ë¡œ ì ‘í–ˆë˜ ì–¸ì–´ìž…ë‹ˆë‹¤. ê¸€ì˜ í¬ê¸°, ìƒ‰ê¹”ë§Œì„ ë°”ê¿€ ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼ ê¸€ì— í•˜ì´í¼ë§í¬ ì¶”ê°€ì™€ ì´ë¯¸ì§€, ë™ì˜ìƒ ë“± ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ì™€ë„ ì—°ê²°ì‹œì¼œì£¼ëŠ” ìœ ìš©í•˜ë©´ì„œ ê¸°ë³¸ì ì¸ ì–¸ì–´ìž„ì„ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ í•™ìŠµí•˜ì˜€ìŠµë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Design The Site : CSS</h2>
-      <p>À¥»çÀÌÆ®¸¦ Á¦ÀÛÇÏ´Âµ¥ °¡Àå ±âº»ÀÌÀÚ Áß¿äÇÑ ¾ð¾î Áß ÇÏ³ªÀÎ HTML (Hyper Text Markup Language)Àº WP µ¿¾Æ¸® È¸¿øµéÀÌ Ã³À½À¸·Î Á¢Çß´ø ¾ð¾îÀÔ´Ï´Ù. ±ÛÀÇ Å©±â, »ö±ò¸¸À» ¹Ù²Ü ¼ö ÀÖÀ» »Ó¸¸ ¾Æ´Ï¶ó ±Û¿¡ ÇÏÀÌÆÛ¸µÅ© Ãß°¡¿Í ÀÌ¹ÌÁö, µ¿¿µ»ó µî ¿©·¯°¡Áö ÄÁÅÙÃ÷¿Íµµ ¿¬°á½ÃÄÑÁÖ´Â À¯¿ëÇÏ¸é¼­ ±âº»ÀûÀÎ ¾ð¾îÀÓÀ» µ¿¾Æ¸® È¸¿øµéÀº ÇÐ½ÀÇÏ¿´½À´Ï´Ù.</p>
+      <p>ì›¹ì‚¬ì´íŠ¸ë¥¼ ì œìž‘í•˜ëŠ”ë° ê°€ìž¥ ê¸°ë³¸ì´ìž ì¤‘ìš”í•œ ì–¸ì–´ ì¤‘ í•˜ë‚˜ì¸ HTML (Hyper Text Markup Language)ì€ WP ë™ì•„ë¦¬ íšŒì›ë“¤ì´ ì²˜ìŒìœ¼ë¡œ ì ‘í–ˆë˜ ì–¸ì–´ìž…ë‹ˆë‹¤. ê¸€ì˜ í¬ê¸°, ìƒ‰ê¹”ë§Œì„ ë°”ê¿€ ìˆ˜ ìžˆì„ ë¿ë§Œ ì•„ë‹ˆë¼ ê¸€ì— í•˜ì´í¼ë§í¬ ì¶”ê°€ì™€ ì´ë¯¸ì§€, ë™ì˜ìƒ ë“± ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ì™€ë„ ì—°ê²°ì‹œì¼œì£¼ëŠ” ìœ ìš©í•˜ë©´ì„œ ê¸°ë³¸ì ì¸ ì–¸ì–´ìž„ì„ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ í•™ìŠµí•˜ì˜€ìŠµë‹ˆë‹¤.</p>
 
     </li>
     <li>
       <h2>Create Website</h2>
-      <p>¸ÅÁÖ ¼ö¿äÀÏ, È¸ÀÇ½Ç¿¡ ¾É¾Æ¼­ ÄÄÇ»ÅÍ¸¦ Å°°í µ¿¾Æ¸® È¸¿øµéÀ» ±³À° À¥»çÀÌÆ®¿¡ Á¢¼ÓÇÏ¿© ÀÚ½ÅÀÌ °øºÎÇß´ø ÄÚµùÀ» °è¼Ó ÇÐ½ÀÇÕ´Ï´Ù. Ä¥ÆÇ ¸Þ¸ð¸¦ ÅëÇÑ º¹½ÀÀº ¹°·Ð, °¡²û¾¿ ¼ö´Ùµµ ¶³¸é¼­ ¿ôÀ½²ÉÀ» ÇÇ¿ì±âµµ ÇÕ´Ï´Ù. ±×·¸°Ô µ¿¾Æ¸® È¸¿øµéÀº ¼­·Î °¡±î¿öÁö°í °ø½Ä À¥»çÀÌÆ® °³¹ßÀ» ÅëÇØ °°ÀÌ Çù·ÂÇÏ¿© ¼­·ÎÀÇ ºÎÁ·ÇÑ ÇÐ½ÀÀ» Ã¤¿öÁÖ°í µµ¿ÍÁÝ´Ï´Ù. µ¿¾Æ¸® È¸¿øµéÀÇ ¿­Á¤, Á¤°ú Çùµ¿½ÉÀ» Æ÷Æ®Æú¸®¿À¸¦ ÅëÇØ È®ÀÎÇØº¸¼¼¿ä.</p>
+      <p>ë§¤ì£¼ ìˆ˜ìš”ì¼, íšŒì˜ì‹¤ì— ì•‰ì•„ì„œ ì»´í“¨í„°ë¥¼ í‚¤ê³  ë™ì•„ë¦¬ íšŒì›ë“¤ì„ êµìœ¡ ì›¹ì‚¬ì´íŠ¸ì— ì ‘ì†í•˜ì—¬ ìžì‹ ì´ ê³µë¶€í–ˆë˜ ì½”ë”©ì„ ê³„ì† í•™ìŠµí•©ë‹ˆë‹¤. ì¹ íŒ ë©”ëª¨ë¥¼ í†µí•œ ë³µìŠµì€ ë¬¼ë¡ , ê°€ë”ì”© ìˆ˜ë‹¤ë„ ë–¨ë©´ì„œ ì›ƒìŒê½ƒì„ í”¼ìš°ê¸°ë„ í•©ë‹ˆë‹¤. ê·¸ë ‡ê²Œ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ ì„œë¡œ ê°€ê¹Œì›Œì§€ê³  ê³µì‹ ì›¹ì‚¬ì´íŠ¸ ê°œë°œì„ í†µí•´ ê°™ì´ í˜‘ë ¥í•˜ì—¬ ì„œë¡œì˜ ë¶€ì¡±í•œ í•™ìŠµì„ ì±„ì›Œì£¼ê³  ë„ì™€ì¤ë‹ˆë‹¤. ë™ì•„ë¦¬ íšŒì›ë“¤ì˜ ì—´ì •, ì •ê³¼ í˜‘ë™ì‹¬ì„ í¬íŠ¸í´ë¦¬ì˜¤ë¥¼ í†µí•´ í™•ì¸í•´ë³´ì„¸ìš”.</p>
 
     </li>
     <li>
       <h2>Publish To The Web</h2>
-      <p>WP µ¿¾Æ¸® È°µ¿À» ÅëÇØ¼­ µ¿¾Æ¸® È¸¿øµéÀº ¸ðµÎ ÄÄÇ»ÅÍ ÇÁ·Î±×·¡¹Ö¿¡ ´ëÇÑ Ã¹ ¹ßÀ» ³»µó¾úÀ¸¸ç, ÀÌ À¥»çÀÌÆ®¸¦ °³¹ßÇÔÀ¸·Î½á ÀÚ½ÅÀÌ ¾ÕÀ¸·Î Á÷Á¢ ¿©·¯°¡Áö ÄÁÅÙÃ÷¸¦ ¸¸µå´Âµ¥ ÁÁÀº ¿ªÇÒÀ» ÇÒ °³¹ßÀÚ°¡ µÉ ¼ö ÀÖÀ» ¹Ø°Å¸§ÀÌ µÉ °ÍÀÌ¶ó°í µ¿¾Æ¸® ½º½º·Î ±â´ë¸¦ ÇÏ°í ÀÖ½À´Ï´Ù.</p>
+      <p>WP ë™ì•„ë¦¬ í™œë™ì„ í†µí•´ì„œ ë™ì•„ë¦¬ íšŒì›ë“¤ì€ ëª¨ë‘ ì»´í“¨í„° í”„ë¡œê·¸ëž˜ë°ì— ëŒ€í•œ ì²« ë°œì„ ë‚´ë”›ì—ˆìœ¼ë©°, ì´ ì›¹ì‚¬ì´íŠ¸ë¥¼ ê°œë°œí•¨ìœ¼ë¡œì¨ ìžì‹ ì´ ì•žìœ¼ë¡œ ì§ì ‘ ì—¬ëŸ¬ê°€ì§€ ì»¨í…ì¸ ë¥¼ ë§Œë“œëŠ”ë° ì¢‹ì€ ì—­í• ì„ í•  ê°œë°œìžê°€ ë  ìˆ˜ ìžˆì„ ë°‘ê±°ë¦„ì´ ë  ê²ƒì´ë¼ê³  ë™ì•„ë¦¬ ìŠ¤ìŠ¤ë¡œ ê¸°ëŒ€ë¥¼ í•˜ê³  ìžˆìŠµë‹ˆë‹¤.</p>
 
     </li>
   </ul>
