--- a/curriculum.html
+++ b/curriculum.html
@@ -12,7 +12,7 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p><a href="#">about</a></p>
         <p><a href="#"><b><u>curriculum</u></b></a></p>
