--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="https://ibb.co/hEfEBk"><img src="https://preview.ibb.co/kRZKcQ/Untitled_design_2.png" alt="Untitled_design_2" width = "400px" height = "auto" border="0"></a></h1>
+      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
         <p>about</p>
         <p>curriculum</p>
@@ -46,15 +46,15 @@
     </li>
     <li>
       <h2>Jeongwon KIM</h2>
-      <p>"¼È·ÏÈ¨Áî°¡ °¡Àå ÁÁ¾Ò¾î¿ä" ¼È·Ï°ú º£³×µñÆ® ÄÄ¹ö¹èÄ¡¸¦ °¡Àå »ç¶ûÇÑ´Ù. Ãß°¡Áß </p>
+      <p>"ì…œë¡í™ˆì¦ˆê°€ ê°€ìž¥ ì¢‹ì•˜ì–´ìš”" ì…œë¡ê³¼ ë² ë„¤ë”•íŠ¸ ì»´ë²„ë°°ì¹˜ë¥¼ ê°€ìž¥ ì‚¬ëž‘í•œë‹¤. ì¶”ê°€ì¤‘ </p>
 
     </li>
     <li>
       <h2>Ikbin JANG</h2>
-      <p>'WPÀÇ ÇÚ¼¶º¸ÀÌ" ÇÁ·Î±×·¡¹Ö ¾ð¾î¸¦ °ÅÀÇ Ã³À½ Á¢ÇØºÃ´Ù. ºñ·Ï ¸¹ÀÌ ¹Ì¼÷ÇÏÁö¸¸ ¿­½ÉÈ÷ ÇÏ·Á´Â ¸ð½ÀÀ» ¸¹ÀÌ º¸¿©ÁØ´Ù.
-ÀåÁ¡Àº ¸Å¿ì ¸¹Áö¸¸ ´ÜÁ¡Àº °ÅÀÇ Á¸ÀçÇÏÁö ¾Ê´Â´Ù. ±»ÀÌ ´ÜÁ¡À» ÇÏ³ª ²ÅÀÚ¸é... ³Ê¹« Àß»ý°Ü¼­ Â÷¸¶ ¾ó±¼À» º¸±â°¡ Èûµé´Ù´Â °ÍÀÌ´Ù.
-ÁÁ¾ÆÇÏ´Â À½½ÄÀº ¸Á°íÀÌ°í ½È¾îÇÏ´Â À½½ÄÀº È«¾îÀÌ´Ù. ³Ê¹« ½È´Ù.
-È¥ÀÚ ³ë´Â °ÍÀ» ¸Å¿ì ÁÁ¾ÆÇÑ´Ù. È¥ÀÚ¼­ ³î ¶§¾ß¸»·Î °¡Àå Å« Äè¶ôÀ» ´À³¢¸ç ÀáÀÌ ¸Å¿ì ¸¹´Ù. Á¦ÀÏ ÁÁ¾ÆÇÏ´Â °ú¸ñÀº ¹ÌÀûºÐ2ÀÌ°í, Á¦ÀÏ ½È¾îÇÏ´Â °ú¸ñÀº ¼öÇÐÀÌ´Ù.</p>
+      <p>'WPì˜ í•¸ì„¬ë³´ì´" í”„ë¡œê·¸ëž˜ë° ì–¸ì–´ë¥¼ ê±°ì˜ ì²˜ìŒ ì ‘í•´ë´¤ë‹¤. ë¹„ë¡ ë§Žì´ ë¯¸ìˆ™í•˜ì§€ë§Œ ì—´ì‹¬ížˆ í•˜ë ¤ëŠ” ëª¨ìŠµì„ ë§Žì´ ë³´ì—¬ì¤€ë‹¤.
+ìž¥ì ì€ ë§¤ìš° ë§Žì§€ë§Œ ë‹¨ì ì€ ê±°ì˜ ì¡´ìž¬í•˜ì§€ ì•ŠëŠ”ë‹¤. êµ³ì´ ë‹¨ì ì„ í•˜ë‚˜ ê¼½ìžë©´... ë„ˆë¬´ ìž˜ìƒê²¨ì„œ ì°¨ë§ˆ ì–¼êµ´ì„ ë³´ê¸°ê°€ íž˜ë“¤ë‹¤ëŠ” ê²ƒì´ë‹¤.
+ì¢‹ì•„í•˜ëŠ” ìŒì‹ì€ ë§ê³ ì´ê³  ì‹«ì–´í•˜ëŠ” ìŒì‹ì€ í™ì–´ì´ë‹¤. ë„ˆë¬´ ì‹«ë‹¤.
+í˜¼ìž ë…¸ëŠ” ê²ƒì„ ë§¤ìš° ì¢‹ì•„í•œë‹¤. í˜¼ìžì„œ ë†€ ë•Œì•¼ë§ë¡œ ê°€ìž¥ í° ì¾Œë½ì„ ëŠë¼ë©° ìž ì´ ë§¤ìš° ë§Žë‹¤. ì œì¼ ì¢‹ì•„í•˜ëŠ” ê³¼ëª©ì€ ë¯¸ì ë¶„2ì´ê³ , ì œì¼ ì‹«ì–´í•˜ëŠ” ê³¼ëª©ì€ ìˆ˜í•™ì´ë‹¤.</p>
 
     </li>
   </ul>
