--- a/about.html
+++ b/about.html
@@ -10,12 +10,13 @@
     <div class="row">
       <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
-        <p><a href="#"><b><u>about</u></b></a></p>
-        <p><a href="#">curriculum</a></p>
-        <p><a href="#">members</a></p>
-        <p><a href="#">catalog</a></p>
-        <p><a href="#">portfolio</a></p>
-        <p><a href="#">photos</a></p>
+        <p><a href="index.html">main</a></p>
+        <p><a href="about.html"><b><u>about</u></b></a></p>
+        <p><a href="curriculum.html">curriculum</a></p>
+        <p><a href="members.html">members</a></p>
+        <p><a href="catalog.html">catalog</a></p>
+        <p><a href="portfolio.html">portfolio</a></p>
+        <p><a href="photos.html">photos</a></p>
       </nav>
     </div>
   </header>
