--- a/curriculum.html
+++ b/curriculum.html
@@ -45,7 +45,7 @@
     </li>
     <li>
       <h2>Design The Site : CSS</h2>
-      <p>웹사이트를 제작하는데 가장 기본이자 중요한 언어 중 하나인 HTML (Hyper Text Markup Language)은 WP 동아리 회원들이 처음으로 접했던 언어입니다. 글의 크기, 색깔만을 바꿀 수 있을 뿐만 아니라 글에 하이퍼링크 추가와 이미지, 동영상 등 여러가지 컨텐츠와도 연결시켜주는 유용하면서 기본적인 언어임을 동아리 회원들은 학습하였습니다.</p>
+      <p>웹사이트를 아름답게 꾸며주는 CSS 언어는 웹사이트를 더 고급진 디자인으로 꾸며줄 뿐만 아니라 사진이나 동영상, 텍스트를 보기 편한 구조로 재배치해주는 중요한 역할을 맡는 언어입니다.</p>
 
     </li>
     <li>
