--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <p><a href="members.html">members</a></p>
         <p><a href="catalog.html">catalog</a></p>
         <p><a href="portfolio.html">portfolio</a></p>
-        <p><a href="photos.html.html">photos</a></p>
+        <p><a href="photo.html">photos</a></p>
       </nav>
     </div>
   </header>
