--- a/photo.html.html
+++ b/photo.html.html
@@ -10,12 +10,12 @@
     <div class="row">
       <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
-        <p>about</p>
-        <p>curriculum</p>
-        <p>members</p>
-        <p>catalog</p>
-        <p>portfolio</p>
-        <p><b><u>photos</u></b></p>
+        <p><a href="about.html">about</a></p>
+        <p><a href="curriculum.html">curriculum</a></p>
+        <p><a href="members.html"members</a></p>
+        <p><a href="catalog.html">catalog</a></p>
+        <p><a href="portfolio.html">portfolio</a></p>
+        <p><b><u><a href="photo.html">photos</a></u></b></p>
       </nav>
     </div>
   </header>
