--- a/photo.html.html
+++ b/photo.html.html
@@ -12,7 +12,7 @@
       <nav class="col-sm-4">
         <p><a href="about.html">about</a></p>
         <p><a href="curriculum.html">curriculum</a></p>
-        <p><a href="members.html"members</a></p>
+        <p><a href="members.html">members</a></p>
         <p><a href="catalog.html">catalog</a></p>
         <p><a href="portfolio.html">portfolio</a></p>
         <p><b><u><a href="photo.html">photos</a></u></b></p>
