--- a/members.html
+++ b/members.html
@@ -10,12 +10,14 @@
     <div class="row">
       <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
+        <nav class="cl-effects-4">
         <p><a href ="about.html">about</a></p>
         <p><a href ="curriculum.html">curriculum</a></p>
         <p><b><u><a href ="members.html">members</a></u></b></p>
         <p><a href="catalog.html">catalog</a></p>
         <p><a href="portfolio.html">portfolio</a></p>
         <p><a href="photo.html>photos</a></p>
+          </nav>
       </nav>
     </div>
   </header>
