--- a/curriculum.html
+++ b/curriculum.html
@@ -14,7 +14,7 @@
     <div class="row">
       <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
-        <nav class="cl-effects-4">
+        <nav class="cl-effect-4">
         <p><a href="about.html">about</a></p>
         <p><a href="curriculum.html"><b><u>curriculum</u></b></a></p>
         <p><a href="members.html">members</a></p>
