--- a/curriculum.html
+++ b/curriculum.html
@@ -16,7 +16,7 @@
       <nav class="col-sm-4">
         <nav class="cl-effect-4">
         <p><a href="about.html">about</a></p>
-        <p><a href="curriculum.html"><b><u>curriculum</u></b></a></p>
+        <p><a href="curriculum.html"><b>curriculum</b></a></p>
         <p><a href="members.html">members</a></p>
         <p><a href="catalog.html">catalog</a></a></p>
         <p><a href="portfolio.html">portfolio</a></p>
