--- a/curriculum.html
+++ b/curriculum.html
@@ -52,7 +52,7 @@
     </li>
     <li>
       <h2>Create Website</h2>
-      <p>매주 수요일, 회의실에 앉아서 컴퓨터를 키고 동아리 회원들을 교육 웹사이트에 접속하여 자신이 공부했던 코딩을 계속 학습합니다. 칠판 메모를 통한 복습은 물론, 가끔씩 수다도 떨면서 웃음꽃을 피우기도 합니다. 그렇게 동아리 회원들은 서로 가까워지고 공식 웹사이트 개발을 통해 같이 협력하여 서로의 부족한 학습을 채워주고 도와줍니다. 동아리 회원들의 열정, 정과 협동심을 포트폴리오를 통해 확인해보세요.</p>
+      <p>HTML과 CSS의 지식을 바탕으로 직접 프로그래밍을 해 봄으로써 다 같이 웹사이트를 제작하며 프로그래밍을 체험할 수 있고 각각에 맡은 역할을 다함으로써 동아리 회원들이 책임감을 기를 수 있게 되었습니다.</p>
 
     </li>
     <li>
