--- a/curriculum.html
+++ b/curriculum.html
@@ -57,7 +57,7 @@
     </li>
     <li>
       <h2>Publish To The Web</h2>
-      <p>WP 동아리 활동을 통해서 동아리 회원들은 모두 컴퓨터 프로그래밍에 대한 첫 발을 내딛었으며, 이 웹사이트를 개발함으로써 자신이 앞으로 직접 여러가지 컨텐츠를 만드는데 좋은 역할을 할 개발자가 될 수 있을 밑거름이 될 것이라고 동아리 스스로 기대를 하고 있습니다.</p>
+      <p>웹사이트를 웹서버에 <a href="github.com">Github</a>를 이용하여 업로드 하는 방법을 학습하고 웹사이트를 웹에 직접 게시함으로서 웹사이트를 모든 사람들이 보고 둘러 볼 수 있도록 제공하여 WP 동아리가 추구하고자 했던 목적을 달성하게 되었습니다.</p>
 
     </li>
   </ul>
