--- a/members.html
+++ b/members.html
@@ -28,7 +28,7 @@
   <ul>
     <li>
       <h2>Jisu YUN</h2>
-      <p></p>
+      <p>동아리 회장으로써 동아리를 주도하고 다른 동아리 회원들이 더욱 더 원활하게 동아리 활동을 할 수 있도록 이끌어주는 회원이다. 동아리 구성과 여러가지 문제속에서 포기하지 않고 연말까지 끝까지 동아리를 이끔으로써 동아리 활동을 잘 마무리 할 수 있도록 도와주었던 회장이다.</p>
 
     </li>
     <li>
