--- a/about.html
+++ b/about.html
@@ -38,8 +38,12 @@
 
     </li>
     <li>
-      <h2>Learn To Code</h2>
-      <p>WP 동아리는 맨 처음 컴퓨터 프로그래밍에서 필수로 필요한 코딩 언어를 접하기 위해 가장 기본 언어들인 HTML, CSS, Javascript를 먼저 공부하고 나중에 Python을 <a href = "codeacademy.com">codeacadmey.com</a> 이라는 코딩 교육 웹사이트를 통해 1학기 동안 공부를 진행합니다. 각 언어마다 주어지는 코스와 작은 프로젝트를 수행하며 익히는 방식으로, 언제든지 학습 사이트에 접속하여 학습을 할 수 있을 뿐만 아니라, 자기 복습과 이미 코스를 수행한 다른 학생들에게도 자발적으로 질문하여 컴퓨터 언어를 학습합니다.</p>
+      <h2> WP 소개</h2>
+      <p>WP는 경일고등학교에 소속된 자율동아리로서 웹사이트 제작이라는 최종목표를 가지고 프로그래밍 언어를 학습하는 모임입니다.
+매주 수요일마다 모두 모여 서로를 도와가며 프로그래밍 언어를 학습하고 보다 알찬 활동을 위해 논의합니다.
+우리는 웹 홈페이지 디자인을 위한 프로그램을 배우는 동아리로 Web Programing에서 이니셜을 따 WP 동아리를 창단하였습니다.
+홈페이지 개설을 위해 CSS, HTML 등 다양한 프로그래밍 언어에 대해 공부하고 활용법을 연구하였습니다.
+</p>
 
     </li>
     <li>
