--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
     
     <li>
       <h2>가제-윤지수링크</h2>
-      <p>ㅜㅠㅡㅏ</p>
+      <p> <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank">Musical "0416"</A> </p>
     </li>
     
     <li>
