--- a/catalog.html
+++ b/catalog.html
@@ -40,8 +40,8 @@
     </li>
     
     <li>
-      <h2>가제-윤지수링크</h2>
-      <p> <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank">Musical "0416"</A> </p>
+      <h2><A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank">Musical "0416"</A> </h2>
+      <p> Musical "0416" - '세월호 사건'을 추모하기 위해... </p>
     </li>
     
     <li>
