--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
     </li>
   </ul>
   
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=439604043103393';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+  
+  <div class="fb-like" data-href="https://wp-club-website.github.io/index.html" data-width="800" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+  
   <footer>
   <font-size ="0.5px">Designed by Jisu YUN<br>Website created by Kyungil High School Web Programming Club, 2017
   </font>
