--- a/about.html
+++ b/about.html
@@ -46,27 +46,8 @@
 </p>
 
     </li>
-    <li>
-      <h2>The Structure : HTML</h2>
-      <p>웹사이트를 제작하는데 가장 기본이자 중요한 언어 중 하나인 HTML (Hyper Text Markup Language)은 WP 동아리 회원들이 처음으로 접했던 언어입니다. 글의 크기, 색깔만을 바꿀 수 있을 뿐만 아니라 글에 하이퍼링크 추가와 이미지, 동영상 등 여러가지 컨텐츠와도 연결시켜주는 유용하면서 기본적인 언어임을 동아리 회원들은 학습하였습니다.</p>
-
-    </li>
-    <li>
-      <h2>Design The Site : CSS</h2>
-      <p>웹사이트를 제작하는데 가장 기본이자 중요한 언어 중 하나인 HTML (Hyper Text Markup Language)은 WP 동아리 회원들이 처음으로 접했던 언어입니다. 글의 크기, 색깔만을 바꿀 수 있을 뿐만 아니라 글에 하이퍼링크 추가와 이미지, 동영상 등 여러가지 컨텐츠와도 연결시켜주는 유용하면서 기본적인 언어임을 동아리 회원들은 학습하였습니다.</p>
-
-    </li>
-    <li>
-      <h2>Create Website</h2>
-      <p>매주 수요일, 회의실에 앉아서 컴퓨터를 키고 동아리 회원들을 교육 웹사이트에 접속하여 자신이 공부했던 코딩을 계속 학습합니다. 칠판 메모를 통한 복습은 물론, 가끔씩 수다도 떨면서 웃음꽃을 피우기도 합니다. 그렇게 동아리 회원들은 서로 가까워지고 공식 웹사이트 개발을 통해 같이 협력하여 서로의 부족한 학습을 채워주고 도와줍니다. 동아리 회원들의 열정, 정과 협동심을 포트폴리오를 통해 확인해보세요.</p>
-
-    </li>
-    <li>
-      <h2>Publish To The Web</h2>
-      <p>WP 동아리 활동을 통해서 동아리 회원들은 모두 컴퓨터 프로그래밍에 대한 첫 발을 내딛었으며, 이 웹사이트를 개발함으로써 자신이 앞으로 직접 여러가지 컨텐츠를 만드는데 좋은 역할을 할 개발자가 될 수 있을 밑거름이 될 것이라고 동아리 스스로 기대를 하고 있습니다.</p>
-
-    </li>
   </ul>
 
+  <img width="100" height="100" src="C:\Users\규배\Saved Games\까치" style="border:2.5 solid black">
 </body>
 </html>
