--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p><a href="catalog.html">catalog</a></p>
         <p><a href="portfolio.html">portfolio</a></p>
         <p><a href="photo.html">photos</a></p>
+          <p><a href="comment.html">comments</a></p>
         </nav>
       </nav>
     </div>
