--- a/catalog.html
+++ b/catalog.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>WP Club Official Website</title>
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Raleway:100,500,600,800" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="curriculum.css">
 </head>
-<body link="white" vlink="orange" alink="red">
+<body>
   <header class="container">
     <div class="row">
+      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
       <nav class="col-sm-4">
-        <p><a href="#">about</a></p>
-        <p><a href="#"><b><u>curriculum</u></b></a></p>
-        <p><a href="#">members</a></p>
-        <p><a href="#">catalog</a></p>
-        <p><a href="#">portfolio</a></p>
-        <p><a href="#">photos</a></p>
+        <nav class="cl-effect-4">
+        <p><a href="about.html">about</a></p>
+        <p><a href="curriculum.html"><b>curriculum</b></a></p>
+        <p><a href="members.html">members</a></p>
+        <p><a href="catalog.html">catalog</a></a></p>
+        <p><a href="portfolio.html">portfolio</a></p>
+        <p><a href="photo.html">photos</a></p>
+      </nav>
       </nav>
     </div>
   </header>
   <div class="header">
   <h1>Catalog</h1>
   </div>
-
   <ul>
     
     <li>
