--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
     </li>
   </ul>
 
-  <img width="100" height="100" src="C:\Users\규배\Saved Games\까치" style="border:2.5 solid black">
+  <img width="400" height="400" src="C:\Users\규배\Desktop\까치\noname01.JPG" style="border:2.5 solid black"> <br>
+  <img width="400" height="400" src="C:\Users\규배\Desktop\까치\noname02.JPG" style="border:2.5 solid black"> <br>
 </body>
 </html>
