--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
     </li>
  
   <P align="center">
-  <img width="400" height="400" src="C:\Users\규배\Desktop\까치\noname01.JPG" style="border:2.5 solid black"> <br>
-  <img width="400" height="400" src="C:\Users\규배\Desktop\까치\noname02.JPG" style="border:2.5 solid black"> <br>
+  <img width="1000" height="400" src="C:\Users\규배\Desktop\까치\noname01.JPG" style="border:2.5 solid black"> <br>/10
+  <img width="1000" height="400" src="C:\Users\규배\Desktop\까치\noname02.JPG" style="border:2.5 solid black"> <br>
   </p>
      </ul>
 </body>
