--- a/members.html
+++ b/members.html
@@ -22,7 +22,7 @@
     </div>
   </header>
 <div class="header">
-  <h1>CURRICULUM</h1>
+  <h1>Introducing Us</h1>
   </div>
 
   <ul>
@@ -61,5 +61,10 @@
     </li>
   </ul>
 
+      <footer>
+        <font-size ="0.5px">Current page is designed by Nahee KIM<br>Website created by Kyungil High School Web Programming Club, 2017
+          </font>
+      </footer>
+      
 </body>
 </html>
