--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Raleway:100,500,600,800" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="curriculum.css">
 </head>
-<body>
+<body link="white" vlink="orange">
   <header class="container">
     <div class="row">
       <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
@@ -41,7 +41,7 @@
     </li>
     
     <li>
-      <h2 size="50"><A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
+      <h2 size="100"><A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
       <p> Musical "0416" - '세월호 사건'을 추모하기 위해... </p>
     </li>
     
