--- a/members.html
+++ b/members.html
@@ -43,7 +43,15 @@
     </li>
     <li>
       <h2>Haewon HWANG</h2>
-      <p></p>
+      <p>< ★해워늬★ >
+WP 내에서 '완벽함'을 담당하고 있다.
+무엇을 하든지 결점이 없어야 한다.
+그녀의 별명은 뚜껑소녀...
+그녀는 완벽해 보이지만 뚜껑안에 무엇이 숨어있을지 모른다.
+해워늬는 무엇을 받든지 똑같이 되돌려준다. 그녀에게 호의를 준다면 선물로 돌아오겠지만 그녀의 심기를 건드린다면 바로...『서-걱』
+해워늬는 매우 정의롭다. 약자에겐 약하지만 강자에겐 강해질 수 있다. 그녀의 앞에서 길 한복판에 쓰레기투척이라도 한다면 빛의 속도로 정의의 심판을 받을 수 있다.
+해워늬는 인생의 쓴맛을 그렇게도 빨리 알고 싶은건지 자신이 할 수 있는 것이라면 다 하고 본다. 미련한거 같지만 동시에 대단하기도 한 친구이다.
+</p>
 
     </li>
     <li>
