--- a/photo.html.html
+++ b/photo.html.html
@@ -22,12 +22,17 @@
   <div class="header">
   </div>
 
+ 
+WP를 하며 행복해하는 나희
 <img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림1" alt="설명문" />
 
+WP 식구들
 <img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림2" alt="설명문" />
-
+  
+홈페이지 작업 화면
 <img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림3" alt="설명문" />
 
+동아리 활동 모습들
 <img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림4" alt="설명문" />
 
 <img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림5" alt="설명문" />
