--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
 
     </li>
  
-  <P align="center">
-  <img width="600" height="380" src="C:\Users\규배\Desktop\까치\noname01.JPG" style="border:2.5 solid black"> <br>
-  <img width="600" height="380" src="C:\Users\규배\Desktop\까치\noname02.JPG" style="border:2.5 solid black"> <br>
+    <A href="https://wp-club-website.github.io/photo.html"> 사진 보러가기 </A>
+ 
+    
   </p>
      </ul>
 </body>
