--- a/photo.html.html
+++ b/photo.html.html
@@ -24,24 +24,24 @@
 
  
 WP를 하며 행복해하는 나희
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림1.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/iE1uAw" alt="설명문" />
 
 WP 식구들
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림2.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/dm5zcb" alt="설명문" />
   
 홈페이지 작업 화면
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림3.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/k3pgqw" alt="설명문" />
 
 동아리 활동 모습들
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림4.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/h67qiG" alt="설명문" />
 
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림5.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/dO7Cxb" alt="설명문" />
 
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림6.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/k57ZAw" alt="설명문" />
 
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림8.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/fibi3G" alt="설명문" />
 
-<img "width=493" "height=355" src="C:\Users\admin\Desktop\WP\그림11.png" alt="설명문" />
+<img "width=493" "height=355" src="http://ibb.co/hBpEAw" alt="설명문" />
 
   
   
