--- a/photo.html.html
+++ b/photo.html.html
@@ -23,16 +23,16 @@
   </div>
 
  
-WP를 하며 행복해하는 나희
+<p>WP를 하며 행복해하는 나희</p>
 <img "width=493" "height=355" src="http://ibb.co/iE1uAw" alt="설명문">
 
-WP 식구들
+<p>WP 식구들</p>
 <img "width=493" "height=355" src="http://ibb.co/dm5zcb" alt="설명문">
   
-홈페이지 작업 화면
+<p>홈페이지 작업 화면</p>
 <img "width=493" "height=355" src="http://ibb.co/k3pgqw" alt="설명문">
 
-동아리 활동 모습들
+<p>동아리 활동 모습들</p>
 <img "width=493" "height=355" src="http://ibb.co/h67qiG" alt="설명문">
 
 <img "width=493" "height=355" src="http://ibb.co/dO7Cxb" alt="설명문">
