--- a/photo.html.html
+++ b/photo.html.html
@@ -22,7 +22,7 @@
   <div class="header">
   </div>
 
- 
+ <nav>
 <p>WP를 하며 행복해하는 나희</p>
 <img "width=493" "height=355" src="http://ibb.co/iE1uAw" alt="설명문">
 
@@ -42,6 +42,7 @@
 <img "width=493" "height=355" src="http://ibb.co/fibi3G" alt="설명문">
 
 <img "width=493" "height=355" src="http://ibb.co/hBpEAw" alt="설명문">
+   </nar>
 
   
   
