--- a/photo.html.html
+++ b/photo.html.html
@@ -23,9 +23,10 @@
   </div>
 
  <nav>
-<p>WP를 하며 행복해하는 나희</p>
+<p>WP를 하며 행복해하는 나희
 <img "width=493" "height=355" src="http://ibb.co/iE1uAw" alt="설명문">
-
+</p>
+   
 <p>WP 식구들</p>
 <img "width=493" "height=355" src="http://ibb.co/dm5zcb" alt="설명문">
   
