--- a/photo.html.html
+++ b/photo.html.html
@@ -24,25 +24,25 @@
 
  <nav>
 <p>WP를 하며 행복해하는 나희
-<img "width=493" "height=355" src="http://ibb.co/iE1uAw" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/fPGi3G/1.png" alt="설명문">
 </p>
    
 <p>WP 식구들</p>
-<img "width=493" "height=355" src="http://ibb.co/dm5zcb" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/eROViG/2.png" alt="설명문">
   
 <p>홈페이지 작업 화면</p>
-<img "width=493" "height=355" src="http://ibb.co/k3pgqw" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/hMmSVw/3.png" alt="설명문">
 
 <p>동아리 활동 모습들</p>
-<img "width=493" "height=355" src="http://ibb.co/h67qiG" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/jQ0AiG/4.png" alt="설명문">
 
-<img "width=493" "height=355" src="http://ibb.co/dO7Cxb" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/gMaMqw/5.png" alt="설명문">
 
-<img "width=493" "height=355" src="http://ibb.co/k57ZAw" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/jRYkHb/6.png" alt="설명문">
 
-<img "width=493" "height=355" src="http://ibb.co/fibi3G" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/dQR5Hb/7.png" alt="설명문">
 
-<img "width=493" "height=355" src="http://ibb.co/hBpEAw" alt="설명문">
+<img "width=493" "height=355" src="http://image.ibb.co/k8HO3G/8.png" alt="설명문">
    </nar>
 
   
