--- a/catalog.html
+++ b/catalog.html
@@ -16,12 +16,11 @@
       <nav class="col-sm-4">
         <nav class="cl-effect-4">
         <p><a href="about.html">about</a></p>
-        <p><a href="curriculum.html"><b>curriculum</b></a></p>
+        <p><a href="curriculum.html">curriculum</a></p>
         <p><a href="members.html">members</a></p>
-        <p><a href="catalog.html">catalog</a></a></p>
+        <p><a href="catalog.html"><b>catalog</b></a></p>
         <p><a href="portfolio.html">portfolio</a></p>
         <p><a href="photo.html">photos</a></p>
-      </nav>
       </nav>
     </div>
   </header>
@@ -41,7 +40,9 @@
     </li>
     
     <li>
-      <h2 size="100"><A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
+      <h2 size="100">
+        <p size="50"> 윤지수 <p/>
+   <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
       <p> Musical "0416" - '세월호 사건'을 추모하기 위해... </p>
     </li>
     
