--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
     
     <li>
       <h2 size="100">
-        <p size="50"> 윤지수 <p/>
+        <p size="80"><b> 윤지수 </b></p>
    <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
       <p> Musical "0416" - '세월호 사건'을 추모하기 위해... </p>
     </li>
