--- a/catalog.html
+++ b/catalog.html
@@ -40,10 +40,11 @@
     </li>
     
     <li>
-      <h2 size="100">
+      <h2>
         <p size="80"><b> 윤지수 </b></p>
-   <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" >Musical "0416"</A> </h2>
-      <p> Musical "0416" - '세월호 사건'을 추모하기 위해... </p>
+   <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" size="150" >Musical "0416"</A> </h2>
+      <p> Musical Album "April 16th (0416)"은 세월호의 300여명 희생자와 그 가족들에게 조의를 표하고, 이러한 끔찍한 재난이 다시 일어나지 않도록 전 세계에 알리는 자원봉사 음악 프로젝트입니다. 세월호 이야기를 담은 오준호 작가의 책에서 영감을 받은 스토리를 기반으로 이 프로젝트에 동감하는 전 세계 6인의 외국인 작곡가들이 함께 만들었습니다. </p>
+      <p><A HREF="https://www.facebook.com/jessieyunofficial/" TARGET="_blank" >  <br></A></p>
     </li>
     
     <li>
