--- a/catalog.html
+++ b/catalog.html
@@ -43,8 +43,9 @@
       <h2>
         <p size="80"><b> 윤지수 </b></p>
    <A HREF="https://www.facebook.com/thesewolmusical/?fref=nf" TARGET="_blank" size="150" > [ Musical "0416" ] </A> </h2>
-      <p> <&nbsp><&nbsp> Musical Album "April 16th (0416)"은 세월호의 300여명 희생자와 그 가족들에게 조의를 표하고, 이러한 끔찍한 재난이 다시 일어나지 않도록 전 세계에 알리는 자원봉사 음악 프로젝트입니다. 세월호 이야기를 담은 오준호 작가의 책에서 영감을 받은 스토리를 기반으로 이 프로젝트에 동감하는 전 세계 6인의 외국인 작곡가들이 함께 만들었습니다. </p>
-      <p><A HREF="https://www.facebook.com/jessieyunofficial/" TARGET="_blank" >  <br></A></p>
+      <p> &nbsp;&nbsp; Musical Album "April 16th (0416)"은 세월호의 300여명 희생자와 그 가족들에게 조의를 표하고, 이러한 끔찍한 재난이 다시 일어나지 않도록 전 세계에 알리는 자원봉사 음악 프로젝트입니다. 세월호 이야기를 담은 오준호 작가의 책에서 영감을 받은 스토리를 기반으로 이 프로젝트에 동감하는 전 세계 6인의 외국인 작곡가들이 함께 만들었습니다. </p>
+      <p><A HREF="https://www.facebook.com/jessieyunofficial/" TARGET="_blank" > [ 세계와 함께하는 성우 활동 ] <br></A></p>
+      <p>아마추어 성우로 활동하고 있는 과정들을 확인 할 수 있는 페이스북 페이지이다.</p>
     </li>
     
     <li>
