--- a/members.html
+++ b/members.html
@@ -33,6 +33,7 @@
     </li>
     <li>
       <h2>Nahee KIM</h2>
+          
       <p></p>
 
     </li>
@@ -56,7 +57,9 @@ WP 내에서 '완벽함'을 담당하고 있다.
     </li>
     <li>
       <h2>Jeongwon KIM</h2>
-      <p>"셜록홈즈가 가장 좋았어요" 셜록과 베네딕트 컴버배치를 가장 사랑한다. 추가중 </p>
+      <p>"셜록홈즈가 가장 좋았어요" 셜록과 베네딕트 컴버배치를 가장 사랑한다. 꿈과 희망으로 가득 찬 고2 정원이는 이불과 베개를 사랑한다. 뗄래야 뗄 수 없는 사이다. 그리고 귀엽고 깜찍한 익빈이의 곰인형 '익곰'이를 사모한다고 한다.
+셜록 덕후이며 덕후의 표본으로 덕질 아마추어인 이쁘니(익빈이)의 롤모델이다. 노래방에서 애니 노래쯤은 가뿐하게 부르는 등 덕질의 만렙을 달성했다.
+그리고 자칭 미각이 없는 특이한 인간이라고 하지만 자세히 보면 상당한 편식쟁이인 것 같다. '비리다'는 느낌을 모른다고 한다. '속이 좋지 않다'라는 느낌을 18년 인생 중 올해 처음으로 알게 되었다. </p>
 
     </li>
     <li>
