3rd version update
- change directory structure
- remove some pages
- change header images

--- a/about.html
+++ b/about.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WP Club Official Website</title>
+  <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>동아리 소개 - 경일고 웹프로그래밍 클럽</title>
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Raleway:100,500,600,800" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="container">
     <div class="row">
-      <h1 class="col-sm-8"><a href="index.html"><img src="https://preview.ibb.co/b3kDUF/wp.png" alt="wp" width = "400px" height = "auto" border="0"></a></h1>
+      <a href="index.html"><img src="img/logo-header.png" alt="WP Club" border="0"></a>
       <nav class="col-sm-4">
-        <p><a href="about.html"><b><u>about</u></b></a></p>
-        <p><a href="curriculum.html">curriculum</a></p>
+        <nav class="cl-effect-4">
+        <p><a href="schedule.html">schedule</a></p>
         <p><a href="members.html">members</a></p>
-        <p><a href="catalog.html">catalog</a></p>
-        <p><a href="portfolio.html">portfolio</a></p>
         <p><a href="photo.html">photos</a></p>
+        <p><a href="about.html" style="color:orange">about</a></p>
+        </nav>
       </nav>
     </div>
   </header>
-  <h1>ABOUT </h1>
-  <div class="header">
+  <div class="header-image" style="background-image: url(img/about.png);">
+    <h2>동아리 소개</h2>
+    <p>경일고등학교 자율동아리 WP (Web Programming) 동아리는 직접 HTML, CSS 등 컴퓨터 언어를 학습하고 익히며 결과물로 공식 홈페이지를 직접 코딩하여 제작함으로써 코딩 공부와 더불어서 일상속에서 활용을 할 수 있는 능력을 키우는 데 목적으로 두고 개설된 컴퓨터 프로그래밍 동아리입니다.</p>
   </div>
-
-  <ul>
-    <li>
-      <h2>&nbsp;&nbsp;&nbsp;<&nbsp;학교소개&nbsp;></h2>
-      <p>우리&nbsp; 학교는 2004년에 개교하였으며, 2011년부터는 선진형 교과교실제를 운영하는 자율형공립고등학교로 새로운 출발을 시작한 젊은 학교입니다. 우리 학교는 "365일 학생학부모선생님이 함께 꿈을 키워가는 행복한 학교"를 교육 이상으로 설정하여 다음과 같은 노력을 하고 있습니다.
-<br>
-첫째, 학생은 자신의 미래와 인생을 이끌어 갈 꿈과 목표를 설정하고 이를 실현하기 위하여 소질과 능력을 개발한다.
-<br>
-둘째, 선생님은 학생의 꿈을 실현할 수 있도록 체계적인 맞춤형 지도와 지원을 하여 교원으로서의 보람을 찾는다.
-<br>
-셋째, 학부모는 미래사회의 변화를 대비하여 학생을 이해하며 격려하며 지원한다.
-<br>
-경일공동체 구성원 모두가 꿈을 채우고, 보람을 키워 행복한 학교를 만들기 위해 노력하고 있습니다.</p>
-
-    </li>
-    <li>
-      <h2> WP 소개</h2>
-      <p>WP는 경일고등학교에 소속된 자율동아리로서 웹사이트 제작이라는 최종목표를 가지고 프로그래밍 언어를 학습하는 모임입니다.
-매주 수요일마다 모두 모여 서로를 도와가며 프로그래밍 언어를 학습하고 보다 알찬 활동을 위해 논의합니다.
-우리는 웹 홈페이지 디자인을 위한 프로그램을 배우는 동아리로 Web Programing에서 이니셜을 따 WP 동아리를 창단하였습니다.
-홈페이지 개설을 위해 CSS, HTML 등 다양한 프로그래밍 언어에 대해 공부하고 활용법을 연구하였습니다.
-</p>
-
-    </li>
- 
-    <A href="https://wp-club-website.github.io/photo.html"> 사진 보러가기 </A>
- 
-    
+  <div class="content">
+    <p>
+    본 동아리는 웹 사이트 제작에 관심이 많은 친구들이 모여 프로그래밍 언어를 학습하는 모임입니다. 매주 수요일마다 모두 모여 서로를 도와가며 프로그래밍 언어를 학습하고 보다 알찬 활동을 위해 논의합니다. 우리는 웹 홈페이지 디자인을 위한 프로그램을 배우는 동아리로 경일고 최지선 선생님의 지도하에 2017년 4월 시작하였습니다. 동아리 홈페이지 개설을 위해 HTML, CSS, 등 웹 프로그래밍 언어와 Github 등에 대해 공부하고 있습니다.
   </p>
-     </ul>
+  <p>
+    WP 동아리 활동을 통해서 동아리 회원들은 모두 컴퓨터 프로그래밍에 대한 첫 발을 내딛었으며, 이 웹사이트를 개발함으로써 자신이 앞으로 직접 여러가지 컨텐츠를 만드는데 좋은 역할을 할 개발자가 될 수 있을 밑거름이 될 것이라고 동아리 스스로 기대를 하고 있습니다.
+  </p>
+
+  <h2>학교 소개</h2>
+  <p>
+    저희가 속한 <a href="http://www.seoulkyungil.hs.kr">경일고등학교</a>는 2004년에 개교하였으며, 2011년부터는 선진형 교과교실제를 운영하는 자율형공립고등학교로 새로운 출발을 시작한 젊은 학교입니다. 우리 학교는 "365일 학생학부모선생님이 함께 꿈을 키워가는 행복한 학교"를 교육 이상으로 설정하여 다음과 같은 노력을 하고 있습니다.
+  </p>
+    <ul>
+      <li>첫째, 학생은 자신의 미래와 인생을 이끌어 갈 꿈과 목표를 설정하고 이를 실현하기 위하여 소질과 능력을 개발한다.
+      <li>둘째, 선생님은 학생의 꿈을 실현할 수 있도록 체계적인 맞춤형 지도와 지원을 하여 교원으로서의 보람을 찾는다.
+      <li>셋째, 학부모는 미래사회의 변화를 대비하여 학생을 이해하며 격려하며 지원한다.
+    </ul>
+  <p>
+    경일공동체 구성원 모두가 꿈을 채우고, 보람을 키워 행복한 학교를 만들기 위해 노력하고 있습니다. 본 동아리도 이러한 학교의 교육 이상에 맞추어 더 많은 학생들이 참여할 수 있도록 노력할 예정입니다.
+  </p>
+  </div>
+  <hr />
+  <footer>
+  <font-size ="0.5px">Designed by Jisu YUN<br>Website created by Kyungil High School Web Programming Club, 2017
+  </font>
+</footer>
 </body>
 </html>
