--- a/members.html
+++ b/members.html
@@ -48,10 +48,10 @@
 혼자 노는 것을 매우 좋아한다. 혼자서 놀 때야말로 가장 큰 쾌락을 느끼며 잠이 매우 많다. 제일 좋아하는 과목은 미적분2이고, 제일 싫어하는 과목은 수학이다.</p>
 
       <h3>Nahee KIM</h3>
-      <p>준비 중</p>
+      <p>WP 내에서 나름 분위기 메이커로 활동하고 있다. 멤버들에게 농담도 던지면서 코딩을 학습하는데 더 화기애애한 환경을 만들어 주었고, 나름의 코딩에 관련된 간단한 지식으로 멤버들을 학습 과정에 있어서 많은 도움을 주었다.</p>
 
       <h3>Yujin LEE</h3>
-      <p>준비 중</p>
+      <p>WP 동아리의 가장 조용하면서도 차분한 멤버 중 하나로, 코딩 프로그램을 처음 학습하는 학생이라 많은 어려움이 있었지만 다른 동아리 회원들의 도움으로 여러가지 코딩 언어를 배울 수 있고 활용을 할 수 있게 되었다.</p>
   </ul>
  </div>
   <hr />
